[package]
name = "yew_covid_dash"
version = "0.1.0"
authors = ["l-const <const-l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = '0.18.0'
wasm-bindgen = '0.2.73'
wee_alloc = "0.4.5"
rs-covid19gr = '0.1.2'